# ReVISE

./: .env.example  .gitignore  CONTRIBUTORS.md  LICENSE.md  README.md  environment.yaml  environment.yml  pyproject.toml  pytest.ini
example-args/: sft.yaml
lm-evaluation-harness/: README.md
lm-evaluation-harness/lm_eval/filters/: transformation.py
lm-evaluation-harness/lm_eval/models/: __init__.py  huggingface.py
lm-evaluation-harness/lm_eval/tasks/gsm8k/: gsm8k-cot-zeroshot-custom.yaml
revise/: __init__.py  config.py  dpo.py  dpo_trainer.py  filters.py  make_dataset.py  preprocess.py  prompts.py  sft-trl.py  sft.py  utils.py
revise/args/: dpo.py  make_dataset.py  parser.py  sft.py
revise/evaluators/: __init__.py  comparison.py  comparison_evaluator.py  metrics.py  utils.py  utils_hendrycks_math.py
revise/generators/: __init__.py  base.py  vllm_generator.py
scripts/: revise.sh  slurm.sh  step-0-eval.sh  step-0-sft.sh  step-1-dataset.sh  step-1-dpo-verification.sh  step-1-dpo.sh  step-2-dataset.sh  step-2-dpo-refine.sh  step-2-dpo.sh  step-2-eval.sh  step-3-dataset.sh  step-3-dpo-refine.sh  step-3-eval.sh
tests/: __init__.py  conftest.py  test_evaluators.py  test_filters.py  test_generators.py  test_make_dataset.py  test_sft.py
