[project]
name = "revise"
version = "0.1.0"
description = "ReVISE: Learning to Refine at Test-Time via Intrinsic Self-Verification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Seunghyuk Oh", email="seunghyukoh0@gmail.com" }, { name="Hyunseok Lee", email="hs.lee@kaist.ac.kr"}]
dependencies = [
    "torch>=2.6.0",
    "accelerate>=1.5.2",
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "transformers>=4.33.3",
    "vllm>=0.8.5",
    "flash-attn>=2.7.4.post1",
    "flashinfer-python>=0.2.5",
    "python-dotenv>=1.1.0",
    "wandb>=0.19.10",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"