[project]
name = "revise"
version = "1.0.0"
description = "ReVISE: Learning to Refine at Test-Time via Intrinsic Self-Verification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Seunghyuk Oh", email="seunghyukoh0@gmail.com" }, { name="Hyunseok Lee", email="hs.lee@kaist.ac.kr"}]
dependencies = [
    "torch==2.6.0",
    "accelerate==1.9.0",
    "datasets==4.0.0",
    "transformers==4.54.1",
    "vllm==0.8.5",
    "python-dotenv==1.1.1",
    "wandb==0.21.0",
    "trl==0.17.0",
    "ray==2.48.0"
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["revise*"]
exclude = ["tests*"]
